Fix MongoDB connection issues with enhanced error handling and timeout settings

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,8 @@
 # Database
-MONGODB_URI=mongodb://localhost:27017/affilify
+# For local development:
+# MONGODB_URI=mongodb://localhost:27017/affilify
+# For MongoDB Atlas (recommended for production):
+MONGODB_URI=mongodb+srv://atlasAdmin:admin@scram.mongodb.net/affilify?retryWrites=true&w=majority
 
 # Authentication
 JWT_SECRET=your-secret-key-here
