Add comprehensive MongoDB connection diagnostics and multiple connection string options

--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,16 @@
 # Database
 # For local development:
 # MONGODB_URI=mongodb://localhost:27017/affilify
+
 # For MongoDB Atlas (recommended for production):
-MONGODB_URI=mongodb+srv://atlasAdmin:admin@scram.mongodb.net/affilify?retryWrites=true&w=majority
+# Option 1: Standard connection string
+MONGODB_URI=mongodb://atlasAdmin:admin@scram.mongodb.net:27017/affilify?authSource=admin
+
+# Option 2: SRV connection string (uncomment to use)
+# MONGODB_URI=mongodb+srv://atlasAdmin:admin@scram.mongodb.net/affilify?retryWrites=true&w=majority&authSource=admin
+
+# Option 3: Direct connection to specific server (uncomment to use)
+# MONGODB_URI=mongodb://atlasAdmin:admin@65.63.236.210:27017/affilify?authSource=admin
 
 # Authentication
 JWT_SECRET=your-secret-key-here
