--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
+    "jszip": "^3.10.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
