--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.542.0",
-    "mongodb": "^6.19.0",
+    "mongodb": "^6.20.0",
     "next": "^15.5.2",
     "nodemailer": "^7.0.6",
+    "openai": "^6.6.0",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -42,7 +44,6 @@
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
-    "jszip": "^3.10.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
