--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.542.0",
     "mongodb": "^6.20.0",
     "next": "^15.5.2",
+    "next-auth": "^4.24.12",
     "nodemailer": "^7.0.6",
     "openai": "^6.6.0",
     "postcss": "^8.5.6",
