--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.0",
+    "date-fns": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
