--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.0.0",
     "framer-motion": "^12.23.12",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.542.0",
     "mongodb": "^6.20.0",
+    "mongoose": "^9.1.5",
     "next": "^16.0.7",
     "next-auth": "^4.24.12",
     "nodemailer": "^7.0.6",
@@ -49,8 +51,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^9.0.0",
-    "date-fns": "^3.0.0"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
